--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "dotenv": "^17.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "nodemon": "^3.1.0"
   }
 }
