--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.10.0",
     "chart.js": "^4.4.1",
+    "date-fns": "^2.30.0",
     "firebase": "^10.12.0",
     "framer-motion": "^12.23.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-clock": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
